# SLAE

./: CMakeLists.txt
TridiagonalMatrixSolver/: CMakeLists.txt  TridiagonalMatrixSolver.h  TridiagonalMatrixSolverTest.cpp  as.cpp
graphs/: CSR_Dense_time.cpp  FPI_Jacobi_GaussSeidel.cpp  theory
src/: CMakeLists.txt
src/Decomposition/: Householder.hpp
src/Matrix/: 1  CSR.h  CSR.hpp  DenseMatrix.h  DenseMatrix.hpp  TridiagonalMatrix.hpp  Vector.h  Vector.hpp  try.cpp
src/Solvers/: Chebyshev.hpp  Conjugate_Gradient.hpp  FGM.hpp  FPI.hpp  GMRES.hpp  Gauss-Seidel.hpp  GaussQR.hpp  HessenbergMatrix.hpp  Jacobi.hpp  TridiagonalMatrixSolver.hpp
src/TridiagonalMatrixSolver/: TridiagonalMatrixSolver.cpp  TridiagonalMatrixSolver.h
tests/: CMakeLists.txt  TridiagonalMatrixSolverTest.cpp  test_CSR.cpp  test_Chebyshev.cpp  test_DenseMatrix.cpp  test_FGM.cpp  test_FPI.cpp  test_GMRES.cpp  test_GaussQR.cpp  test_GaussSeidel.cpp  test_Jacobi.cpp  test_TridiagonalMatrixSolver.cpp  test_conjicated_gradient.cpp  test_householder.cpp
time/: CSR_time.cpp
